Geting Tweets finish

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Sentiment</string>
+    <string name="search_user_hint">Search an user</string>
 </resources>
